# LogLineEngine

./: CONSULTING_SERVICES.md  README.md  agents.me
logline_motor/: Cargo.toml  TASK_LIST.md
logline_motor/action/: Cargo.toml
logline_motor/action/src/: lib.rs
logline_motor/api/src/: handlers.rs  health.rs  lib.rs  server.rs
logline_motor/cli/src/: args.rs  interactive.rs  main.rs
logline_motor/codex/: Cargo.toml
logline_motor/codex/src/: completion.rs  context_injector.rs  intent.rs  lib.rs  planner.rs  reasoning.rs  span_suggestion.rs  translator.rs
logline_motor/core/: Cargo.toml
logline_motor/core/src/: lib.rs
logline_motor/examples/: simulacao.lll  workflow.lll
logline_motor/execution/: Cargo.toml
logline_motor/execution/src/: dispatcher.rs  executor.rs  fallback.rs  lib.rs  parallel.rs  retry.rs  runner.rs
logline_motor/flow/: Cargo.toml
logline_motor/flow/src/: flow_engine.rs  flow_step.rs  lib.rs  state_machine.rs  workflow.rs
logline_motor/llm/: Cargo.toml
logline_motor/llm/src/: completion.rs  context_window.rs  embedding.rs  lib.rs  llm_client.rs  llm_memory.rs  prompt.rs  token_filter.rs
logline_motor/parser/: Cargo.toml
logline_motor/parser/src/: lib.rs  loader.rs
logline_motor/provenance/: Cargo.toml
logline_motor/provenance/src/: auditor.rs  checksum.rs  lib.rs  logger.rs  provenance_snapshot.rs  signer.rs  trace.rs  verifier.rs
logline_motor/simulate/: Cargo.toml
logline_motor/simulate/src/: bio.rs  (+8 more)
logline_motor/tests/: integration.rs
logline_motor/ui_blocks/: Cargo.toml
logline_motor/vault/: Cargo.toml
(+79 files in other folders)
